# string

./: CMakeLists.txt  Makefile  README.md  build.sh  clean.sh  compile.sh
examples/: Makefile  example.cpp  example.txt
make_compile/: dynamic_makefile  static_makefile
tests/: CMakeLists.txt  append.cpp  comparations.cpp  compare.cpp  constructor.cpp  constructors.cpp  erase.cpp  extra_operators.cpp  find.cpp  index.cpp  indexes.cpp  input_output.cpp  insert.cpp  io.cpp  operations.cpp  other.cpp  size.cpp  sizes.cpp  stringops.cpp  substr.cpp  swap.cpp
